<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>org.springframework.cloud</groupId>
		<artifactId>spring-cloud-build</artifactId>
		<version>3.0.5</version>
		<relativePath/>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.tencent.cloud</groupId>
	<artifactId>spring-cloud-tencent</artifactId>
	<packaging>pom</packaging>
	<version>${revision}</version>
	<name>Spring Cloud Tencent</name>
	<description>Spring Cloud Tencent</description>
	<url>https://github.com/Tencent/spring-cloud-tencent/tree/2020.0</url>

	<organization>
		<name>Tencent</name>
		<url>https://opensource.tencent.com/</url>
	</organization>

	<licenses>
		<license>
			<name>The BSD 3-Clause License (BSD3)</name>
			<url>https://raw.githubusercontent.com/Tencent/spring-cloud-tencent/2020.0/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/Tencent/spring-cloud-tencent</url>
		<connection>scm:git:git@github.com:Tencent/spring-cloud-tencent.git</connection>
		<developerConnection>scm:git:git@github.com:Tencent/spring-cloud-tencent.git</developerConnection>
	</scm>

	<modules>
		<module>spring-cloud-tencent-commons</module>
		<module>spring-cloud-tencent-polaris-context</module>
		<module>spring-cloud-tencent-rpc-enhancement</module>
		<module>spring-cloud-starter-tencent-metadata-transfer</module>
		<module>spring-cloud-starter-tencent-polaris-config</module>
		<module>spring-cloud-starter-tencent-polaris-discovery</module>
		<module>spring-cloud-starter-tencent-polaris-ratelimit</module>
		<module>spring-cloud-starter-tencent-polaris-circuitbreaker</module>
		<module>spring-cloud-starter-tencent-polaris-router</module>
		<module>spring-cloud-tencent-plugin-starters</module>
		<module>spring-cloud-tencent-dependencies</module>
		<module>spring-cloud-starter-tencent-all</module>
		<module>spring-cloud-tencent-examples</module>
		<module>spring-cloud-tencent-coverage</module>
	</modules>

	<developers>
		<developer>
			<id>SkyeBeFreeman</id>
			<name>Haotian Zhang</name>
			<email>928016560@qq.com</email>
			<organization>Tencent</organization>
			<url>https://github.com/SkyeBeFreeman/</url>
		</developer>

		<developer>
			<id>lepdou</id>
			<name>lepdou</name>
			<email>lepdou@126.com</email>
			<organization>Tencent</organization>
			<url>https://github.com/lepdou</url>
		</developer>

		<developer>
			<name>Andrew Shan</name>
			<email>samshan08@126.com</email>
			<organization>Tencent</organization>
		</developer>

		<developer>
			<id>xiaoyao1999hn</id>
			<name>Jie Cheng</name>
			<email>348893717@qq.com</email>
			<organization>Tencent</organization>
			<url>https://github.com/xiaoyao1999hn/</url>
		</developer>
	</developers>

	<properties>
		<!-- Project revision -->
		<revision>1.10.0-2020.0.5-SNAPSHOT</revision>

		<!-- Spring Framework -->
		<spring.framework.version>5.3.21</spring.framework.version>

		<!-- Spring Boot -->
		<spring.boot.version>2.4.13</spring.boot.version>

		<!-- Spring Cloud -->
		<spring.cloud.version>2020.0.5</spring.cloud.version>

		<!-- Maven Plugin Versions -->
		<jacoco.version>0.8.8</jacoco.version>
		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
		<flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>

		<!--  Checkstyle      -->
		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
		<maven-checkstyle-plugin.failsOnViolation>true</maven-checkstyle-plugin.failsOnViolation>
		<maven-checkstyle-plugin.includeTestSourceDirectory>true
		</maven-checkstyle-plugin.includeTestSourceDirectory>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Spring Cloud Tencent Dependencies -->
			<dependency>
				<groupId>com.tencent.cloud</groupId>
				<artifactId>spring-cloud-tencent-dependencies</artifactId>
				<version>${revision}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Spring Framework Dependencies -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring.framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Spring Boot Dependencies -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Spring Cloud Dependencies -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring.cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<parameters>true</parameters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<inherited>true</inherited>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>

			<distributionManagement>
				<snapshotRepository>
					<id>nexus-snapshots</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
				</snapshotRepository>
				<repository>
					<id>nexus-releases</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>sonatype</id>
			<repositories>
				<repository>
					<id>nexus-snapshots</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
					<releases>
						<enabled>false</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
						<updatePolicy>always</updatePolicy>
					</snapshots>
				</repository>
				<repository>
					<id>nexus-releases</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>false</enabled>
					</snapshots>
				</repository>
			</repositories>
		</profile>
	</profiles>

</project>
